k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backfin
  labels:
    name: backfin
    environment: production
